15_Day_Python_type_errors/15_python_type_errors
#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
Created on Sun Mar  7 08:03:06 2021

@author: rancy
"""

# =============================================================================
# ## Python Error Types

# ## When we write code it's common that we make a typo or some other common error. If our code 
## fails to run, the python interpreter will display a message, containing feedback with 
## information on where the problem occurs and the type of an error. It will also sometimes gives 
## us suggestions on a possible fix. Understanding different types of errors in programming 
## languages will help us to debug our code quickly and also it makes us better at what we do.

# ## Let's see the most common error types one by one. First let us open our python interactive shell. 
## Go to your you computer terminal and write 'python'. The python interactive shell will be opened.
# =============================================================================

### SyntaxError
'''
>>> print 'hello world'
  File "<stdin>", line 1
    print 'hello world'
                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print('hello world')?
'''
#As you can see we made a syntax error because we forgot to enclose the string with parenthesis 
#and python already suggests the solution. Let's fix it.

### NameError
'''
>>> print(age)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'age' is not defined
'''

### IndexError

'''
>>> numbers = [1, 2, 3, 4, 5]
>>> numbers[5]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
'''

### ModuleNotFoundError

'''
>>> import math
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'math'
'''

### AttributeError

'''
>>> import math
>>> math.PI
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'math' has no attribute 'PI'
'''

### KeyError

'''
>>> users = {'name':'Asab', 'age':250, 'country':'Finland'}
>>> users['name']
'Asab'
>>> users['county']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'county'
'''

### TypeError

'''
>>> 4 + '3'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
'''

### ImportError

'''
>>> from math import power
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: cannot import name 'power' from 'math'
'''

### ValueError

'''
>>> int('12a')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: '12a'
'''

### ZeroDivisionError

'''
>>> 1/0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero
'''

